Better ini file

--- a/Songbase.ini
+++ b/Songbase.ini
@@ -5,14 +5,14 @@ Screen_X = 387
 Screen_Y = 211
 Display_W = 1920
 Display_H = 1080
-Preview_X = 705
-Preview_Y = 40
+Preview_X = 942
+Preview_Y = 44
 Preview_W = 531
-Preview_H = 298
-LiveWin_X = 932
-LiveWin_Y = 204
+Preview_H = 333
+LiveWin_X = 946
+LiveWin_Y = 389
 LiveWin_W = 531
-LiveWin_H = 298
+LiveWin_H = 333
 SearchResults_X = 486
 SearchResults_Y = 266
 Title_X = 392
@@ -76,6 +76,7 @@ Auto_Complete = 1
 SearchText = 
 Search_OHP = 1
 Search_Mus = @@@@
+Background_List = "Click to add a list of images"
 Print_Trans = 1
 Print_OHP = 1
 Print_Rec = 1
@@ -87,8 +88,8 @@ SL_CSK = 0
 SL_CIK = 0
 SL_Capo = 0
 Res = 0
-Project_Scale = -1
-Project_To_Screen = 0
+Project_Scale = 0
+Project_To_Screen = 2
 SL_Trans = -1
 Print_Report = -1
 File = 
